Changes in quick date selector's layout

--- a/sleeping.html
+++ b/sleeping.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>BackLater – Sleeping Tabs</title>
+	<title>Reopen Tab Later – Sleeping Tabs</title>
 	<style>
 		body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 16px; background:#F9FAFB; color:#0F172A; }
 		h1 { margin: 0 0 12px; }
