--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>BackLater – Settings</title>
+	<title>Reopen Tab Later – Settings</title>
 	<style>
 		body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 16px; background:#F9FAFB; color:#0F172A; }
 		.field { margin: 12px 0; }
