--- a/popup.html
+++ b/popup.html
@@ -3,23 +3,42 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>BackLater</title>
+	<title>Reopen Tab Later</title>
 	<style>
 		body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 0; background:#F9FAFB; color:#0F172A; }
-		.container { width: 320px; padding: 12px; }
-		.grid { display:grid; grid-template-columns: 1fr 1fr 1fr; gap:8px; }
-		.tile { background:#fff; border:1px solid #E5E7EB; border-radius:8px; padding:10px; text-align:center; cursor:pointer; }
+		.container { width: 280px; padding: 0; }
+		.grid { display: flex; flex-direction: column; gap: 0; }
+		.tile { 
+			background: #fff; 
+			border: 1px solid #E5E7EB; 
+			border-bottom: none;
+			padding: 16px 20px; 
+			text-align: center; 
+			cursor: pointer; 
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 16px;
+			font-weight: 500;
+			color: #5a5a5a;
+			letter-spacing: 0.04em;
+			line-height: 1.2;
+			min-height: 48px;
+		}
+		.tile:last-child { border-bottom: 1px solid #E5E7EB; }
 		.tile:hover { background:#F3F4F6; }
-		.footer { display:flex; justify-content:space-between; margin-top:12px; }
-		.link { color:#0F172A; text-decoration:none; font-size:12px; }
+		.footer { display:flex; justify-content:space-between; margin:20px; }
+		.link { 
+			color:#0F172A; text-decoration:none; font-size:12px; 
+		}
 	</style>
 </head>
 <body>
 	<div class="container">
 		<div class="grid" id="grid"></div>
 		<div class="footer">
-			<a class="link" id="sleeping" href="#">Sleeping Tabs</a>
-			<a class="link" id="settings" href="#">Settings</a>
+			<a class="link" id="sleeping" href="#">Postponed Tabs</a>
+			<a class="link" id="settings" href="#">⛯ Settings</a>
 		</div>
 	</div>
 	<script src="popup.js"></script>
