Update version to 0.5.0, fix reopen notification features, and add test notification button

--- a/options.html
+++ b/options.html
@@ -25,6 +25,7 @@
 	<div class="field"><label>Default time for date picker (hour 0–23)</label><input id="defaultHour" type="number" min="0" max="23"></div>
 	<div class="field"><label>Week starts on</label><input type="text" value="Monday" disabled></div>
 	<div class="field"><button class="primary" id="save">Save</button></div>
+	<div class="field"><button id="testNotif">Test notification</button></div>
 	<hr>
 	<h2>Danger zone</h2>
 	<p class="danger">Delete all snoozes and recurrences (no undo)</p>
