--- a/pick.html
+++ b/pick.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Reopen Tab Later – Pick a Date</title>
+    <title>Reopen Tab Later – Pick a Date & Time</title>
 	<style>
 		body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 16px; background:#F9FAFB; color:#0F172A; }
 		.field { margin: 12px 0; }
@@ -14,7 +14,7 @@
 	</style>
 </head>
 <body>
-	<h1>Pick a Date</h1>
+    <h1>Pick a Date & Time</h1>
 	<div class="field"><label>Date</label><input id="date" type="date"></div>
 	<div class="field"><label>Time</label><input id="time" type="time" step="1800"></div>
 	<div class="field"><button id="create" class="primary">Snooze</button></div>
